buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
            classpath("org.springframework.boot:spring-boot-gradle-plugin:2.7.3")
    }
}

allprojects {
   group = 'org.miracum.recruit'
   version = '0.1.0'

   sourceCompatibility = "17"
   targetCompatibility = "17"
}

subprojects {
    apply plugin: "org.springframework.boot" version "2.7.2"
    apply plugin: "io.spring.dependency-management" version "1.0.12.RELEASE"
    apply plugin: "jacoco"
    apply plugin: "com.diffplug.spotless" version "6.8.0"
    apply plugin: "io.freefair.lombok" version "6.5.0.3"
    apply plugin: "com.google.cloud.tools.jib" version "3.2.1"
}
